# easy-pass-bot

./: .env.example  .gitignore  CHANGELOG.md  CLEANUP_ANALYSIS.md  CONTRIBUTING.md  DEPLOYMENT_STATUS.md  DUAL_BOT_SETUP.md  FINAL_SECURITY_REPORT.md  FUTURE_OPTIMIZATIONS.md  IMMEDIATE_SECURITY_ACTIONS_REPORT.md  LICENSE  OPTIMIZATION_REPORT.md  PROJECT_ANALYSIS_REPORT.md  QUICK_START.md  README.md  REVISION_v1.1.0_REPORT.md  REVISION_v2.0.0_REPORT.md  SECURITY_AUDIT_REPORT.md  SECURITY_IMPROVEMENT_PLAN.md  SERVICE_MANAGEMENT.md  apply_optimizations.sh  check_admin.sh  check_admin_status.sh  check_all_services.sh  check_petrenko_password.py  config.py  cookies.txt  create_admin_with_notifications.py  init_users.py  main.py  migrate_admin_auth.py  migrate_phone_numbers.py  notifications_list.md  populate_passes.py  pyproject-backup.toml  pyproject-optimized.toml  pyproject.toml  pytest.ini  quick_create_admin.py  quick_populate.py  (+16 more)
admin/: README.md  cookies.txt  main.py  run_tests.py  start_admin.py
admin/static/css/: style.css
admin/static/js/: main.js
admin/templates/: base.html  dashboard.html  login.html  passes.html  users.html
admin/tests/: test_admin.py  test_user_management.py
bots/: __init__.py  config.py
bots/resident_bot/: __init__.py  handlers.py  main.py
bots/security_bot/: __init__.py  admin_handlers.py  handlers.py  main.py
database/: __init__.py  database.py  easy_pass.db.backup_before_email_migration  easy_pass.db.backup_before_email_removal  easy_pass.db.backup_before_phone_migration  easy_pass_backup_20250912_213521.db  easy_pass_backup_20250913_010758.db  easy_pass_backup_before_admin_auth_20250913_012030.db  easy_pass_backup_before_cleanup_20250914_223627.db  models.py
docs/: PHONE_NORMALIZATION.md  RELEASE_NOTES_v2.2.0.md  RELEASE_NOTES_v2.3.0.md  RELEASE_NOTES_v2.4.0.md  RELEASE_NOTES_v2.4.1.md  RELEASE_NOTES_v2.4.2.md  archive_system.md  database_structure.md  passes_examples.sql
docs/api/: README.md
docs/architecture/: README.md
docs/deployment/: README.md
docs/developer/: README.md
docs/user/: README.md
handlers/: __init__.py  admin_handlers.py  common_handlers.py  resident_handlers.py  security_handlers.py
keyboards/: __init__.py  resident_keyboards.py  security_keyboards.py
logs/: security_audit.log.2025-09-21
scripts/: advanced_security_analysis.py  init_users.py  log_monitor.py  manage_bot.sh  migrate_archive.py  security_check.py  security_fixes.py  security_update.py
src/: __init__.py
src/easy_pass_bot/: __init__.py  config.py
src/easy_pass_bot/bot/: __init__.py  main.py
src/easy_pass_bot/core/: __init__.py  base.py  container.py  exceptions.py  interfaces.py  logging.py  service_config.py  settings.py
src/easy_pass_bot/database/: __init__.py  database.py  models.py  pass_repository.py
src/easy_pass_bot/features/: __init__.py  analytics.py  confirmation.py  navigation.py
src/easy_pass_bot/handlers/: __init__.py  admin_handlers.py  common_handlers.py  resident_handlers.py  security_handlers.py
src/easy_pass_bot/keyboards/: __init__.py  admin_keyboards.py  resident_keyboards.py  security_keyboards.py
src/easy_pass_bot/monitoring/: __init__.py  alerting.py  health_check.py  metrics.py
src/easy_pass_bot/security/: __init__.py  audit_logger.py  config.py  middleware.py  rate_limiter.py  validator.py
src/easy_pass_bot/services/: __init__.py  archive_service.py  cache_service.py  circuit_breaker.py  error_handler.py  notification_service.py  pass_service.py  retry_service.py  user_service.py  validation_service.py
src/easy_pass_bot/utils/: __init__.py  notifications.py  password_generator.py  phone_normalizer.py  telegram_notifier.py  validators.py
tests/: __init__.py  conftest.py  test_database.py  test_phone_integration.py  test_phone_normalizer.py  test_security.py  test_services.py
tests/fixtures/: __init__.py  pass_fixtures.py  user_fixtures.py
tests/integration/: __init__.py  test_user_workflow.py
tests/mocks/: __init__.py  repository_mocks.py
tests/unit/: test_archive_service.py
utils/: __init__.py  notifications.py  validators.py
(+7 files in other folders)
